examples/comparison-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: wordpress-example

spec:
  containers:
    - name: wordpress
      image: wordpress
      ports:
      - containerPort: 8080
    - name: mysql
      image: mysql
      volumeMounts:
        - name: db-data
          mountPath: /var/lib/mysql/data

  volumes:
    - name: db-data
      emptyDir: {}


# replications are not possible on pod level

# all pods are in the same network
