examples/hello-world-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-world-kubernetes-frontend
  labels:
    app: hello-world-kubernetes
    stage: frontend
spec:
  containers:
  - name: frontend
    image: docker.pkg.github.com/mm53/hello-world-kubernetes/frontend:latest
    ports:
    - containerPort: 8080
