examples/pod-with-configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-world-kubernetes-frontend
  labels:
    app: hello-world-kubernetes
    stage: frontend
spec:
  containers:
    - name: frontend
      image: docker.pkg.github.com/mm53/hello-world-kubernetes/frontend:latest
      ports:
        - containerPort: 8080
      volumeMounts:
        - name: templates
          mountPath: /var/www/templates/additional

  volumes:
    - name: templates
      configMap:
        name: hello-world-greeting
# optional, if not present all files (key-value-pairs) will be added
        items:                  
          - key: greeting.html
            path: greeting.html
