examples/hello-world-service-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
spec:
  selector:
    app: hello-world-kubernetes
    stage: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
