examples/hello-world-service-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
spec:
  type: NodePort
  selector:
    app: hello-world-kubernetes
    stage: frontend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
