examples/hello-world-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          backend:
            serviceName: hello-world
            servicePort: 80
